# litellama

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
crammers/models/: __init__.py
crammers/models/bert/: bert.py  config.py
crammers/optimizers/: scheduled_optimizer.py
litellama/models/: __init__.py  base_model.py
litellama/models/bert/: bert.py  bert_config.py  config.py
litellama/models/gemma/: gemma.py  gemma_config.py
litellama/models/llama/: __init__.py  llama.py  llama_config.py
litellama/samplers/: top_k.py  top_p.py
notebooks/: rope_embeddings.ipynb
scripts/data/bert_pretraining_data/: bert_pretraining_data.py  normalize.py  preprocess.py  publish_dataset_to_hf_hub.py  text_normalizer.py
tests/: conftest.py  test_bert.py  test_llama.py
