[project]
name = "litellama"
version = "0.1.0"
description = "Light-weight from scratch implementations of open-weights LLMs."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "datasets>=3.2.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.27.1",
    "hydra-core>=1.3.2",
    "langdetect>=1.0.9",
    "lightning>=2.5.0.post0",
    "loguru>=0.7.3",
    "pre-commit>=4.1.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ray>=2.41.0",
    "ruff>=0.9.3",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers==4.33.3",
    "typer>=0.15.1",
]


[tool.setuptools]
packages = ["litellama"]
